# agentic-pdm-log-cleaning

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt
.agents/skills/battery-physical-model/: SKILL.md
.agents/skills/coolant-thermal-model/: SKILL.md
.agents/skills/maintenance-evidence-derivation/: SKILL.md
.agents/skills/motion-and-trip-signals/: SKILL.md
.agents/skills/telematics-benchmark-scenarios/: SKILL.md
.agents/skills/telematics-schema-integration/: SKILL.md
.agents/skills/telematics-state-machine/: SKILL.md
.agents/skills/telematics-test-oracle/: SKILL.md
.agents/skills/workshop-geofence-signals/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
agentic_pdm_data_cleaning/benchmark/: __init__.py  exp_zero_shot.py
agentic_pdm_data_cleaning/domain/: __init__.py  dependencies.py
agentic_pdm_data_cleaning/evaluation/: results_parser.py
agentic_pdm_data_cleaning/synthetic_generator/: __init__.py  fleet_registry.py  seeds.py  table_generator.py
agentic_predictive_maintenance_cleaning.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
config/: app_config.yaml
config/benchmarks/: benchmark_gpt-5.yaml  benchmark_gpt-oss-120b.yaml  benchmark_gpt-oss-20b.yaml  benchmark_kimi-k2-0905.yaml  benchmark_nemotron-nano-9b-v2.yaml  benchmark_ubix.yaml
config/fleets/: fleet_ubix.yaml
config/hyperparameters_space/: space_1.yaml
config/models/: gpt-5-mini.yaml  gpt-5.yaml  gpt-oss-120b.yaml  gpt-oss-20b.yaml  kimi-k2-0905.yaml  nemotron-nano-9b-v2.yaml  qwen2:0.8b.yaml
data/results/benchmark_ubix/zero_shot/nemotron_nano_9b_v2/run_0/: maintenance_log_cleaned.csv  run_info.jsonl
data/synthetic/benchmark_ubix/fleets/fleet_ubix/run_0/: fleet_ubix.db  json_records.json  llm_params.json
data/synthetic/benchmark_ubix/fleets/fleet_ubix/run_0/fleet_registry/: fleet_registry_clean.csv  fleet_registry_noisy.csv
data/synthetic/benchmark_ubix/fleets/fleet_ubix/run_0/maintenance_log/: maintenance_log_clean.csv  maintenance_log_noisy.csv
data/synthetic/benchmark_ubix/fleets/fleet_ubix/run_0/signals/odometer/: b100E_odometer_signal.csv  b101E_odometer_signal.csv  b108F_odometer_signal.csv  b114F_odometer_signal.csv  b125B_odometer_signal.csv  (+204 more)
docs/: paper1_scope.md  paper2_scope.md  roadmap.md
resources/: service_catalog.csv
src/agentic_pdm_data_cleaning/: cli.py
src/agentic_pdm_data_cleaning/benchmark/: __init__.py  exp_runner_base_function_output.py
src/agentic_pdm_data_cleaning/domain/: evaluation_entry.py  generic_evaluation_entry.py  llm.py  maintenance_record_state.py
src/agentic_pdm_data_cleaning/evaluation/: evaluator.py
src/agentic_pdm_data_cleaning/experiment/: benchmark_executor.py  environment_generator.py  fleet_data_generator.py
src/agentic_pdm_data_cleaning/preprocessor/: __init__.py  maintenance_record_preprocessor.py  service_catalog.py
src/agentic_pdm_data_cleaning/synthetic_generator/: base_generator.py  maintenance_log.py  signals.py
src/agentic_pdm_data_cleaning/utils/: __init__.py  batch2stream.py  check_benchmark.py  config_parser.py  constants.py  db_utils.py  filesystem.py  llm.py  logger.py  utility.py
tests/: test_package_import.py
