[project]
name = "agentic-predictive-maintenance-cleaning"
version = "0.1.0"
description = "A project for agentic predictive maintenance data cleaning"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name="Valeriu Dimidov", email="valeriu@example.com" }
]
dependencies = [
    "deepdiff>=8.5.0",
    "duckdb>=1.3.2",
    "duckdb-engine>=0.17.0",
    "faker>=37.4.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "mem0ai>=0.1.113",
    "myst-parser>=4.0.1",
    "networkx>=3.4.2",
    "numpy>=2.2.5",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "pydantic>=2.11.4",
    "pydantic-ai[logfire]>=0.3.1",
    "pydot>=4.0.0",
    "pyyaml>=6.0.2",
    "seaborn>=0.13.2",
    "sphinx>=8.2.3",
    "sqlalchemy>=2.0.41",
]
