[project]
name = "agentic-predictive-maintenance-cleaning"
version = "0.1.0"
description = "A project for agentic predictive maintenance data cleaning"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name="Valeriu Dimidov", email="valeriu@example.com" }
]
dependencies = [
    "duckdb>=1.3.2",
    "duckdb-engine>=0.17.0",
    "faker>=37.4.0",
    "logfire>=4.7.0",
    "numpy>=2.2.5",
    "openai>=1.107.3",
    "pandas>=2.2.3",
    "pydantic>=2.11.4",
    "pydantic-ai[logfire]>=0.3.1",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.7.2",
    "sqlalchemy>=2.0.41",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agentic_pdm_data_cleaning*"]
